--- a/calendario/style.css
+++ b/calendario/style.css
@@ -1,1 +1,18 @@
 
+table{
+    border-collapse: collapse;
+}
+th{
+    background-color: black;
+    color: white;
+    border: 1px solid white;;
+}
+
+td{
+    background-color: darkgrey;
+    border: 1px solid white;
+    text-align: right;
+}
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
